--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-on : push
+on: push
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -7,13 +7,21 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-   
+
+    - name: 📂 Install dependencies
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14'  
+
+    - name: 📂 Install npm dependencies
+      run: npm install
+    
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ftp-ngobeyn.alwaysdata.net
         username: ngobeyn
-        password: ${{ secrets.ftp_password }}
+        password : ${{ secrets.ftp_password }}
         exclude: |
           **/.git*
           **/.git*/**
